[package]
name = "rust_survey"
version = "0.1.0"
authors = ["Benedict Gaster <benedict.gaster@uwe.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rosc = "0.2.0"
log = "0.4"
simple_logger = "1.3.0"
serde_json = "1.0.40"
serde = "1.0.101"
serde_derive = "1.0.101"
ws = "0.9.0"
websocket = "0.23.0"
csv = "1.1.1"
rand = "0.7.2"
uuid = { version = "0.7", features = ["serde", "v4"] }